--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux-logger": "^3.0.6",
@@ -44,7 +45,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "jest-expo": "~37.0.0"
+    "jest-expo": "~37.0.0",
+    "react-native-svg-transformer": "^0.14.3"
   },
   "private": true
 }
