--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "babel-plugin-jsx-control-statements": "^4.1.0",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~37.0.0",
     "react-native-svg-transformer": "^0.14.3"
