--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "babel-plugin-jsx-control-statements": "^4.1.0",
     "babel-preset-expo": "^8.2.3",
     "jest-expo": "^38.0.0",
-    "react-native-svg-transformer": "^0.14.3"
+    "react-native-svg-transformer": "^0.14.3",
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3"
   },
   "private": true
 }
